--- a/src/style/style.css
+++ b/src/style/style.css
@@ -45,15 +45,15 @@ body{
 
 }
 .auth-header{
-    margin-top: 9vh;
+    margin-top: 8vh;
 }
 .auth-header-title{
-    font-size: 3.5vw;
+    font-size: 3.3vw;
     font-weight: 700 !important;
     margin: 0;
 }
 .auth-header-img{
-    width: 3vw;
+    width: 2.8vw;
     margin-bottom: 1vw;
 }
 .auth-header-text{
@@ -78,4 +78,87 @@ body{
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
+}
+
+
+.dashboard-layout{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nav{
+    background: #000;
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1vw 3vw;
+    box-sizing: border-box;
+}
+.nav-logo{
+    margin-left: 1vw;
+    width: 2.7vw;
+}
+.nav-link{
+    color: white;
+    text-decoration: underline;
+}
+
+.dashboard-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 80vw;
+    margin-top: 10vh;
+}
+
+.user-list{
+    width: 40vw;
+    height: 70vh;
+    background: #F7F7F7;
+    border-radius: 2vw;
+    margin-right: 2vw;
+}
+
+.tabs{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.tab{
+    width: 19vw;
+    margin-right: 2vw;
+    height: 20vh;
+    background: #F7F7F7;
+    border-radius: 1vw;
+    padding-left: 2.5vw;
+    box-sizing: border-box;
+}
+
+.tab-text{
+    color:gray;
+    margin-top: 4vh;
+}
+.tab-metric{
+    margin: 0;
+    font-size: 3vw;
+    font-family: 'Inter';
+    font-weight: 400;
+}
+
+.chart{
+    width: 40vw;
+    margin-top: 5vh;
+    padding-left: 2.5vw;
+    padding-top: 2vh;
+    box-sizing: border-box;
+    height: 45vh;
+    background: #F7F7F7;
+    border-radius: 2vw;
+}
+
+.chart-text{
+    color:gray;
 }
