--- a/src/style/style.css
+++ b/src/style/style.css
@@ -45,7 +45,7 @@ body{
 
 }
 .auth-header{
-    margin-top: 8vh;
+    margin-top: 4vh;
 }
 .auth-header-title{
     font-size: 3.3vw;
@@ -69,15 +69,19 @@ body{
 }
 .auth-form-layout{
     color: gray;
-    margin-top: 2vw;
+    margin-top: 1vw;
     font-size: 0.9vw;
 }
 .auth-form{
-    margin-bottom: 6vw;
+    margin-bottom: 2vw;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
+}
+.login-form{
+    margin-bottom: 6vw;
+    margin-top: 3vw;
 }
 
 
@@ -102,6 +106,7 @@ body{
 }
 .nav-link{
     color: white;
+    cursor: pointer;
     text-decoration: underline;
 }
 
@@ -117,6 +122,8 @@ body{
     width: 40vw;
     height: 70vh;
     background: #F7F7F7;
+    box-sizing: border-box;
+    overflow-x: hidden;
     border-radius: 2vw;
     margin-right: 2vw;
 }
@@ -143,7 +150,7 @@ body{
 }
 .tab-metric{
     margin: 0;
-    font-size: 3vw;
+    font-size: 2.8vw;
     font-family: 'Inter';
     font-weight: 400;
 }
@@ -151,7 +158,7 @@ body{
 .chart{
     width: 40vw;
     margin-top: 5vh;
-    padding-left: 2.5vw;
+    padding: 2 2.5vw;
     padding-top: 2vh;
     box-sizing: border-box;
     height: 45vh;
@@ -162,3 +169,46 @@ body{
 .chart-text{
     color:gray;
 }
+
+.user-table{
+    margin: 0vw 0vw;
+    width: 100%;
+}
+
+.user-list::-webkit-scrollbar {
+    width: 0vw;
+  }
+.user-table-header{
+    width: 40vw;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: flex-start !important;
+    padding: 0.75vw 3vw;
+    position: sticky;
+    top: 0;
+    background: #F7F7F7;
+    border-bottom: 1px solid rgb(223, 223, 223);
+}
+
+.user-table-row{
+    width: 40vw;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: flex-start;
+    padding: 0.5vw 3vw;
+    border-top: 1px solid rgb(223, 223, 223);
+}
+
+.user-table-header>td{
+    width: 20vw;
+    padding: 1vw 1vw;
+}
+
+
+.user-table-row>td{
+    width: 20vw;
+    font-size: 0.9vw;
+    color: gray;
+    padding: 1vw 1vw;
+}
+
